# EMA-VFI

./: .gitignore  pyproject.toml
src/emavfi/: Trainer.py  config.py  dataset.py  demo_2x.py  demo_Nx.py  train.py
